feat: user activation feature
