# src/controllers/auth.controller.ts
@@ -22,12 +22,28 @@ const registerValidateSchema = Yup.object({
     fullName: Yup.string().required(),
     username: Yup.string().required(),
     email: Yup.string().required(),
-    password: Yup.string().required(),
+    password: Yup.string().required().min(6, "Password must be at least 6 characters").test("at-least-one-uppercase-letter", "Password must contains at least one uppercase letter", (value) => {
+        if (!value) return false
+        const regex = /^(?=.*[A-Z])/
+        return regex.test(value)
+    }).test("at-least-one-number", "Password must contains at least one number", (value) => {
+        if (!value) return false
+        const regex = /^(?=.*\d)/
+        return regex.test(value)
+    }),
     confirmPassword: Yup.string().required().oneOf([Yup.ref('password'), ""], "Password not match"),
 });
 
 export default {
     async register(req: Request, res: Response) {
+        /**
+         #swagger.tags = ['Auth']
+         #swagger.requestBody = {
+         required: true,
+         schema: {$ref: "#/components/schemas/RegisterRequest"}
+         }
+         */
+
         const {fullName, username, email, password, confirmPassword} = req.body as unknown as TRegister
 
         try {
@@ -49,9 +65,10 @@ export default {
     },
     async login(req: Request, res: Response) {
         /**
+         #swagger.tags = ['Auth']
          #swagger.requestBody = {
-             required: true,
-             schema: {$ref: "#/components/schemas/LoginRequest"}
+         required: true,
+         schema: {$ref: "#/components/schemas/LoginRequest"}
          }
          */
         const {identifier, password} = req.body as unknown as TLogin
@@ -65,7 +82,8 @@ export default {
                     {
                         username: identifier,
                     }
-                ]
+                ],
+                isActive: true,
             });
 
             if (!userByIdentifier) {
@@ -103,8 +121,9 @@ export default {
     },
     async me(req: IReqUser, res: Response) {
         /**
+         #swagger.tags = ['Auth']
          #swagger.security = [{
-             "bearerAuth": []
+         "bearerAuth": []
          }]
          */
         try {
@@ -114,6 +133,40 @@ export default {
             res.status(200).json({
                 message: 'Success get user profile',
                 data: result
+            })
+        } catch (error) {
+            const err = error as unknown as Error;
+            res.status(400).json({
+                message: err.message,
+                data: null
+            })
+        }
+    },
+    async activation(req: Request, res: Response) {
+        /**
+         #swagger.tags = ['Auth']
+         #swagger.requestBody = {
+         require: true,
+         schema: {$ref: '#/components/schemas/ActivationRequest'}
+         }
+         */
+        try {
+            const {code} = req.body as { code: string }
+
+            const user = await UserModel.findOneAndUpdate(
+                {
+                    activationCode: code,
+                }, {
+                    isActive: true
+                },
+                // Agar update bisa langsung diterapkan
+                {
+                    new: true
+                }
+            )
+            res.status(200).json({
+                message: 'user successfully activated',
+                data: user
             })
         } catch (error) {
             const err = error as unknown as Error;
